Practica 1 Finalizada arreglada
correccion de errores

--- a/src/main/resources/static/pagina3.html
+++ b/src/main/resources/static/pagina3.html
@@ -39,7 +39,7 @@
 
         </aside>
         <section id="contenido">
-            <h1>Videos que te podrian gustar </h1> <label>Busqueda rapida </label><input type="search" name="search" placeholder="criterio de busqueda"><br>
+            <h1>Videos Subidos </h1> <label>Busqueda rapida </label><input type="search" name="search" placeholder="criterio de busqueda"><br>
             <hr>
             
             
