--- a/src/main/resources/static/pagina4.html
+++ b/src/main/resources/static/pagina4.html
@@ -21,7 +21,7 @@
             <h2>Menu</h2>
             <hr><!-- comment -->
             <hr> 
-            <a style= "margin-left: 20px;" href="pagina6.html">Tendencia</a> 
+            <a style= "margin-left: 20px;" href="pagina1.html">Tendencia</a> 
             <hr>
             <a style= "margin-left: 20px;" href="pagina2.html">Perfil</a> 
             <hr>
@@ -37,7 +37,7 @@
 
         </aside>
         <section id="contenido">
-            <h1>Ejemplo de bootstrap</h1><!-- comment -->
+            <h1>Subir video</h1><!-- comment -->
             <hr>
 
             <div style="margin-left: 20px;" class="container border" >
