--- a/src/main/resources/static/pagina1.html
+++ b/src/main/resources/static/pagina1.html
@@ -22,7 +22,7 @@
             <h2>Menu</h2>
             <hr><!-- comment -->
             <hr> 
-            <a style= "margin-left: 20px;" href="pagina6.html">Tendencia</a> 
+            <a style= "margin-left: 20px;" href="pagina1.html">Tendencia</a> 
             <hr>
             <a style= "margin-left: 20px;" href="pagina2.html">Perfil</a> 
             <hr>
@@ -38,7 +38,7 @@
 
         </aside>
         <section id="contenido">
-            <h1>Ejemplo de bootstrap</h1><!-- comment -->
+            <h1>Lo mas visto en los ultimos dias </h1><!-- comment -->
             <hr>
 
             <div style="margin-left: 20px;" class="container border" >
